feat: Add speedometer screen with location tracking, speech alerts, and tab navigation.

--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
     "plugins": [
       "expo-router",
       [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Ứng dụng cần quyền truy cập vị trí để hiển thị tốc độ hiện tại của bạn."
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
