--- a/app.json
+++ b/app.json
@@ -20,7 +20,11 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.mjnamjkaze.myappreactnative"
+      "package": "com.mjnamjkaze.myappreactnative",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "output": "static",
@@ -54,8 +58,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "729e1e9a-f301-48d5-809a-cbbec9d2f016"
+        "projectId": "3814cf57-4f08-4f7e-9af5-cc060005792d"
       }
-    }
+    },
+    "owner": "mjnamjkaze"
   }
 }
